--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -4,13 +4,13 @@
     Welcome to {{title}}!
   </h1>
   <nav>
-    <a [routerLink]="['/scala']">
+    <a [routerLink]="['scala']">
       <img width="450" height="300" src="../assets/scala.png">
     </a>
-    <a [routerLink]="['/play']">
+    <a [routerLink]="['play']">
       <img width="400" height="300" src="../assets/play.svg">
     </a>
-    <a [routerLink]="['/angular']">
+    <a [routerLink]="['angular']">
       <img width="300" src="../assets/angular.svg">
     </a>
   </nav>
@@ -24,4 +24,3 @@
     </h3>
   </div>
 </div>
-
